--- a/reflections/pages/question-label-sinner/read.html
+++ b/reflections/pages/question-label-sinner/read.html
@@ -1,94 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/question-label-sinner/read.html">
-    <title>When Seeking Assurance is Labeled as Sin</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <style>
-        /* --- GLOBAL & TYPOGRAPHY STYLES FOR RELAXATION --- */
-        body {
-            font-family: Georgia, 'Times New Roman', Times, serif; /* Relaxing Serif Font */
-            line-height: 1.7;
-            background-color: #f8f8f8; /* Soft, Off-White Background */
-            color: #333; /* Dark Grey Text */
-            margin: 0;
-            padding: 20px;
-        }
+  <title>When Seeking Assurance is Labeled as Sin — Ninox Antolihao</title>
 
-        .container {
-            max-width: 750px; /* Optimal reading width */
-            margin: 0 auto; /* Center the content */
-            background-color: #fff;
-            padding: 40px;
-            border-radius: 8px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05); /* Subtle shadow */
-        }
+  <!-- SEO -->
+  <meta name="robots" content="index,follow">
+  <meta name="description" content="A reflection on how sincere questions for assurance can be mislabeled as sin—and how humility and honesty can protect faith from fear." />
 
-        h1, h2 {
-            font-family: Helvetica, Arial, sans-serif;
-            color: #556B2F; /* Muted Olive Green for Headings */
-            line-height: 1.3;
-        }
+  <!-- Canonical -->
+  <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/question-label-sinner/read.html">
 
-        /* --- MEDIA & PLAYER STYLES --- */
-        .reflection-cover {
-            width: 100%;
-            height: 300px; /* Placeholder height */
-            background-color: #e0e0e0; /* Light grey placeholder color */
-            margin-bottom: 30px;
-            border-radius: 6px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-style: italic;
-            color: #666;
-            background-size: cover; /* For when you add a background-image */
-            background-position: center;
-        }
+  <!-- Open Graph (for Facebook / Messenger preview) -->
+  <meta property="og:type" content="article">
+  <meta property="og:title" content="When Seeking Assurance is Labeled as Sin">
+  <meta property="og:description" content="A reflection on how sincere questions for assurance can be mislabeled as sin—and how humility and honesty can protect faith from fear.">
+  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/question-label-sinner/read.html">
+  <!-- If you have a cover image for this page, change the filename below -->
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/question-label-sinner/cover.jpg">
 
-        .audio-player {
-            margin: 20px 0 30px 0;
-            padding: 15px;
-            background-color: #eee;
-            border-radius: 6px;
-        }
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
 
-        /* --- BUTTON STYLES --- */
-        .button-group {
-            border-top: 1px solid #ddd;
-            padding-top: 20px;
-            margin-top: 40px;
-            text-align: center;
-        }
+  <style>
+    /* --- GLOBAL & TYPOGRAPHY STYLES FOR RELAXATION --- */
+    body {
+      font-family: Georgia, 'Times New Roman', Times, serif; /* Relaxing Serif Font */
+      line-height: 1.7;
+      background-color: #f8f8f8; /* Soft, Off-White Background */
+      color: #333; /* Dark Grey Text */
+      margin: 0;
+      padding: 20px;
+    }
 
-        .share-button {
-            padding: 10px 20px;
-            margin: 5px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-weight: bold;
-            text-decoration: none;
-            color: white;
-            display: inline-block;
-            transition: background-color 0.3s;
-        }
+    .container {
+      max-width: 750px; /* Optimal reading width */
+      margin: 0 auto; /* Center the content */
+      background-color: #fff;
+      padding: 40px;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05); /* Subtle shadow */
+    }
 
-        .twitter {
-            background-color: #1DA1F2; /* Twitter blue */
-        }
+    h1, h2 {
+      font-family: Helvetica, Arial, sans-serif;
+      color: #556B2F; /* Muted Olive Green for Headings */
+      line-height: 1.3;
+    }
 
-        .email {
-            background-color: #DD4B39; /* Google red for email */
-        }
+    /* --- MEDIA & PLAYER STYLES --- */
+    .reflection-cover {
+      width: 100%;
+      height: 300px; /* Placeholder height */
+      background-color: #e0e0e0; /* Light grey placeholder color */
+      margin-bottom: 30px;
+      border-radius: 6px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-style: italic;
+      color: #666;
+      background-size: cover; /* For when you add a background-image */
+      background-position: center;
+    }
 
-        .share-button:hover {
-            opacity: 0.9;
-        }
-    </style>
+    .audio-player {
+      margin: 20px 0 30px 0;
+      padding: 15px;
+      background-color: #eee;
+      border-radius: 6px;
+    }
+
+    /* --- BUTTON STYLES --- */
+    .button-group {
+      border-top: 1px solid #ddd;
+      padding-top: 20px;
+      margin-top: 40px;
+      text-align: center;
+    }
+
+    .share-button {
+      padding: 10px 20px;
+      margin: 5px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-weight: bold;
+      text-decoration: none;
+      color: white;
+      display: inline-block;
+      transition: background-color 0.3s;
+    }
+
+    .twitter {
+      background-color: #1DA1F2; /* Twitter blue */
+    }
+
+    .email {
+      background-color: #DD4B39; /* Google red for email */
+    }
+
+    .share-button:hover {
+      opacity: 0.9;
+    }
+  </style>
 </head>
+
 <body>
 
     <div class="container">
