--- a/reflections/pages/the-inner-listener/read.html
+++ b/reflections/pages/the-inner-listener/read.html
@@ -4,17 +4,28 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>PRAYER -- The Inner Listener</title>
+  <title>Prayer — The Inner Listener · Ninox Antolihao</title>
 
-  <!-- Disclaimer -->
+  <!-- SEO -->
+  <meta name="robots" content="index,follow">
   <meta name="description" content="The ideas expressed here are personal opinions and interpretations. They are not official references, factual sources, or professional advice.">
-  <meta property="og:description" content="The ideas expressed here are personal opinions and interpretations. They are not official references, factual sources, or professional advice.">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/the-inner-listener/read.html">
 
   <!-- Open Graph -->
   <meta property="og:type" content="article">
-  <meta property="og:title" content="PRAYER - The inner listener">
-  <meta property="og:image" content="prayer.jpg">
+  <meta property="og:title" content="Prayer — The Inner Listener">
+  <meta property="og:description" content="The ideas expressed here are personal opinions and interpretations. They are not official references, factual sources, or professional advice.">
   <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-inner-listener/read.html">
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/the-inner-listener/prayer.jpg">
+
+  <!-- Service Worker (disable on read.html pages to avoid "SW failed") -->
+  <script>
+    if ('serviceWorker' in navigator && !location.pathname.startsWith('/reflections/pages/')) {
+      navigator.serviceWorker.register('/reflections/sw.js').catch(()=>{});
+    }
+  </script>
 
   <!-- Main reflections styles -->
   <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
@@ -417,13 +428,6 @@
       flex-shrink: 0;
     }
   </style>
-
-  <!-- Service Worker -->
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/reflections/sw.js');
-    }
-  </script>
 </head>
 
 <body>
