--- a/reflections/pages/the-lost-language-of-metaphor/read.html
+++ b/reflections/pages/the-lost-language-of-metaphor/read.html
@@ -4,21 +4,35 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <title>The Lost Language of Metaphor -- Solitude Reflections · Ninox Antolihao</title>
-  <meta name="description" content="On why symbols used to reveal truth -- and how literalism turns living meaning into dead rules." />
+  <title>The Lost Language of Metaphor — Solitude Reflections · Ninox Antolihao</title>
 
+  <!-- SEO -->
+  <meta name="robots" content="index,follow">
+  <meta name="description" content="On why symbols used to reveal truth — and how literalism turns living meaning into dead rules." />
+
+  <!-- Canonical (keep ONLY one) -->
   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/the-lost-language-of-metaphor/read.html" />
+
+  <!-- Open Graph -->
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="The Lost Language of Metaphor -- Solitude Reflections" />
-  <meta property="og:description" content="A reflection on symbols, literalism, and the danger of confusing the map for the landscape." />
+  <meta property="og:title" content="The Lost Language of Metaphor — Solitude Reflections" />
+  <meta property="og:description" content="On why symbols used to reveal truth — and how literalism turns living meaning into dead rules." />
   <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/the-lost-language-of-metaphor/lost-language-of-metaphor.jpg" />
   <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-lost-language-of-metaphor/read.html" />
+
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
 
   <link rel="icon" href="/reflections/assets/favicon.ico" />
   <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=21" />
   <link rel="stylesheet" href="/reflections/assets/reflections.css?v=20">
-   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/the-lost-language-of-metaphor/read.html">
+
+  <!-- Service Worker (disable on read.html pages to avoid "SW failed") -->
+  <script>
+    if ('serviceWorker' in navigator && !location.pathname.startsWith('/reflections/pages/')) {
+      navigator.serviceWorker.register('/reflections/sw.js').catch(()=>{});
+    }
+  </script>
 
   <style>
     :root{--bg:#1f1815;--paper:#2a211e;--ink:#f3e6dd;--muted:#c9b0a4;--accent:#ffb873;}
