--- a/reflections/pages/the-madness-of-fath/read.html
+++ b/reflections/pages/the-madness-of-fath/read.html
@@ -4,22 +4,33 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>THE MADNESS OF FAITH -- Ninox Antolihao</title>
+  <title>The Madness of Faith — Ninox Antolihao</title>
 
-  <!-- Disclaimer -->
+  <!-- SEO -->
+  <meta name="robots" content="index,follow">
   <meta name="description" content="The ideas expressed here are personal opinions and interpretations. They are not official references, factual sources, or professional advice.">
-  <meta property="og:description" content="The ideas expressed here are personal opinions and interpretations. They are not official references, factual sources, or professional advice.">
 
   <!-- Open Graph -->
   <meta property="og:type" content="article">
-  <meta property="og:title" content="The Madness of Faith - Solitude Reflections">
-  <!-- ✅ Change this image filename if needed -->
-  <meta property="og:image" content="the-madness-of-faith.jpg">
-  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-madness-of-faith/read.html">
+  <meta property="og:title" content="The Madness of Faith — Solitude Reflections">
+  <meta property="og:description" content="The ideas expressed here are personal opinions and interpretations. They are not official references, factual sources, or professional advice.">
+  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-madness-of-fath/read.html">
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/the-madness-of-fath/the-madness-of-faith.jpg">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/the-madness-of-fath/read.html">
 
   <!-- Main reflections styles -->
   <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
-   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/the-madness-of-fath/read.html">
+
+  <!-- Service Worker (disable on read.html pages to avoid "SW failed") -->
+  <script>
+    if ('serviceWorker' in navigator && !location.pathname.startsWith('/reflections/pages/')) {
+      navigator.serviceWorker.register('/reflections/sw.js').catch(()=>{});
+    }
+  </script>
+
+
 <style>
   /* =========================
      GLOBAL FIXED HEADER
