--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -4,21 +4,24 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>The PARADOX OF GOD -- </title>
+  <title>The Paradox of God — Ninox Antolihao</title>
 
-  <!-- Disclaimer -->
+  <!-- SEO -->
+  <meta name="robots" content="index,follow">
   <meta name="description" content="The ideas expressed here are personal opinions and interpretations. They are not official references, factual sources, or professional advice.">
-  <meta property="og:description" content="The ideas expressed here are personal opinions and interpretations. They are not official references, factual sources, or professional advice.">
 
   <!-- Open Graph -->
   <meta property="og:type" content="article">
-  <meta property="og:title" content="PARADOX OF GOD - ">
-  <meta property="og:image" content="paradoxofgod.PNG">
+  <meta property="og:title" content="The Paradox of God — Ninox Antolihao">
+  <meta property="og:description" content="The ideas expressed here are personal opinions and interpretations. They are not official references, factual sources, or professional advice.">
   <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod.PNG">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
 
   <!-- Main reflections styles -->
   <link rel="stylesheet" href="/reflections/assets/ref-header.css">
-   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
 
   <style>
     /* =========================
@@ -37,7 +40,7 @@
 
     .ref-header-inner {
       max-width: 1100px;
-      margin: 1 auto;
+      margin: 0 auto;
       padding: 0.8rem 1rem; /* slightly taller header */
       display: flex;
       align-items: center;
@@ -416,16 +419,16 @@
       margin-left: 0.75rem;
       flex-shrink: 0;
     }
-    
   </style>
 
-  <!-- Service Worker -->
+  <!-- Service Worker (disable on read.html pages to avoid "SW failed") -->
   <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/reflections/sw.js');
+    if ('serviceWorker' in navigator && !location.pathname.startsWith('/reflections/pages/')) {
+      navigator.serviceWorker.register('/reflections/sw.js').catch(()=>{});
     }
   </script>
 </head>
+
 
 <body>
   <!-- FIXED GLOBAL HEADER -->
