--- a/reflections/pages/transcendence/read.html
+++ b/reflections/pages/transcendence/read.html
@@ -4,21 +4,31 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>TTRANSCENDENCE -- Ninox Antolihao</title>
+  <title>Transcendence — Ninox Antolihao</title>
 
-  <!-- Disclaimer -->
+  <!-- SEO -->
+  <meta name="robots" content="index,follow">
   <meta name="description" content="The ideas expressed here are personal opinions and interpretations. They are not official references, factual sources, or professional advice.">
-  <meta property="og:description" content="The ideas expressed here are personal opinions and interpretations. They are not official references, factual sources, or professional advice.">
 
   <!-- Open Graph -->
   <meta property="og:type" content="article">
-  <meta property="og:title" content="TRANSCENDENCE - Solitude Reflections">
-  <meta property="og:image" content="transcendence.jpg">
+  <meta property="og:title" content="Transcendence — Solitude Reflections">
+  <meta property="og:description" content="The ideas expressed here are personal opinions and interpretations. They are not official references, factual sources, or professional advice.">
   <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/transcendence/read.html">
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/transcendence/transcendence.jpg">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/transcendence/read.html">
 
   <!-- Main reflections styles -->
   <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
-   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/transcendence/read.html">
+
+  <!-- Service Worker (disable on read.html pages to avoid "SW failed") -->
+  <script>
+    if ('serviceWorker' in navigator && !location.pathname.startsWith('/reflections/pages/')) {
+      navigator.serviceWorker.register('/reflections/sw.js').catch(()=>{});
+    }
+  </script>
 
   <style>
     /* =========================
