--- a/reflections/pages/mirror-of-worship/read.html
+++ b/reflections/pages/mirror-of-worship/read.html
@@ -3,8 +3,23 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>The Mirror of Worship -- Ninox Antolihao</title>
-  <meta name="description" content="A clear, practical reflection on worship--what it does to us, and how it shapes what we become." />
+
+  <title>The Mirror of Worship — Ninox Antolihao</title>
+
+  <!-- SEO -->
+  <meta name="robots" content="index,follow">
+  <meta name="description" content="A clear, practical reflection on worship—what it does to us, and how it shapes what we become." />
+  <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/mirror-of-worship/read.html" />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="The Mirror of Worship — Solitude Reflections" />
+  <meta property="og:description" content="A clear, practical reflection on worship—what it does to us, and how it shapes what we become." />
+  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/mirror-of-worship/read.html" />
+  <!-- Change filename below if your cover image is different -->
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/mirror-of-worship/cover.jpg" />
+  <meta name="twitter:card" content="summary_large_image" />
+
   <link rel="icon" href="/reflections/assets/favicon.ico" />
 
   <!-- 🔹 Small, local CSS only for header + audio (NO redesign) -->
@@ -252,6 +267,7 @@
     }
   </style>
 </head>
+
 
 <body>
 
