--- a/reflections/pages/moral-choice/read.html
+++ b/reflections/pages/moral-choice/read.html
@@ -12,6 +12,8 @@
 
   <title>The Moral Choice of Duality -- Solitude Reflections · Ninox Antolihao</title>
 
+  <!-- SEO -->
+  <meta name="robots" content="index,follow">
   <meta name="description" content="A reflection on contrast, moral restraint, and why true goodness requires the capacity to do harm and the decision not to." />
   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/moral-choice/read.html" />
 
@@ -37,6 +39,13 @@
     If your latest is different, set it here.
   ========================================================== -->
   <link rel="stylesheet" href="/reflections/assets/reflections.css?v=19" />
+
+  <!-- Service Worker (optional; add only if you were getting "SW failed") -->
+  <script>
+    if ('serviceWorker' in navigator && !location.pathname.startsWith('/reflections/pages/')) {
+      navigator.serviceWorker.register('/reflections/sw.js').catch(()=>{});
+    }
+  </script>
 
   <style>
     :root{
@@ -227,6 +236,7 @@
     }
   </style>
 </head>
+
 
 <body>
   <!-- ✅ Unified fixed header mount (JS builds the header) -->
