--- a/reflections/pages/godevil/read.html
+++ b/reflections/pages/godevil/read.html
@@ -11,19 +11,26 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
   <title>The Good and Evil within Us — Ninox Antolihao</title>
+
+  <!-- SEO -->
+  <meta name="robots" content="index,follow">
   <meta name="description" content="The Good and Evil within Us — a reflection by Ninox Antolihao on language, personification, and sovereignty of mind." />
+  <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/godevil/read.html">
 
   <!-- Open Graph -->
+  <meta property="og:type" content="article" />
   <meta property="og:title" content="The Good and Evil within Us" />
   <meta property="og:description" content="When we stop seeing God and the Devil as external characters and start seeing them as linguistic masks of our own internal potential, the illusion of the eternal war vanishes." />
-  <meta property="og:type" content="article" />
-  <!-- Optional: set your cover image path in this folder -->
-  <meta property="og:image" content="cover.png" />
+  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/godevil/read.html" />
+  <!-- If your image is not cover.png, change the filename -->
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/godevil/cover.png" />
+  <meta name="twitter:card" content="summary_large_image" />
 
   <!-- Theme color (mobile) -->
   <meta name="theme-color" content="#1f1815" />
-<link rel="stylesheet" href="/reflections/assets/reflections.css">
- <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/godevil/read.html">
+
+  <link rel="stylesheet" href="/reflections/assets/reflections.css">
+
   <style>
     :root{
       --bg: #1f1815;
@@ -303,12 +310,11 @@
       p{ color:#000 !important; }
       .footer{ color:#333 !important; border-top:1px solid #ddd !important; }
 
-      /* Page counter */
       @page{
         margin: 16mm 14mm 16mm 14mm;
       }
       .print-pages{
-        counter-reset: page 0; /* starts at 1 on first printed page for most browsers */
+        counter-reset: page 0;
       }
       .print-page-number{
         position: fixed;
@@ -323,91 +329,90 @@
         content: counter(page);
       }
     }
+
     /* ===== TIGHTER PAGE MARGINS (safe, minimal) ===== */
-main, .content, .container, .wrap {
-  padding-left: 12px !important;
-  padding-right: 12px !important;
-}
+    main, .content, .container, .wrap {
+      padding-left: 12px !important;
+      padding-right: 12px !important;
+    }
 
-/* If your page uses a max-width wrapper */
-.container, .wrap, main {
-  margin-left: auto;
-  margin-right: auto;
-}
+    .container, .wrap, main {
+      margin-left: auto;
+      margin-right: auto;
+    }
 
-/* ===== COMMENTS SECTION: reduce outer spacing ===== */
-.comments-wrap {
-  margin: 10px 0 !important;     /* less top/bottom gap */
-  padding: 8px !important;      /* less inner padding */
-  border-radius: 8px;           /* keep elegant look */
-}
+    /* ===== COMMENTS SECTION: reduce outer spacing ===== */
+    .comments-wrap {
+      margin: 10px 0 !important;
+      padding: 8px !important;
+      border-radius: 8px;
+    }
 
-.comments-wrap h3 {
-  margin: 0 0 10px 0 !important; /* tighter title spacing */
-}
+    .comments-wrap h3 {
+      margin: 0 0 10px 0 !important;
+    }
 
-/* ===== Cusdis iframe sizing + remove extra gaps ===== */
-#cusdis_thread {
-  margin: 0 !important;
-  padding: 0 !important;
-}
+    /* ===== Cusdis iframe sizing + remove extra gaps ===== */
+    #cusdis_thread {
+      margin: 0 !important;
+      padding: 0 !important;
+    }
 
-#cusdis_thread iframe {
-  width: 100% !important;
-  height: 70vh !important;       /* fixed comment window */
-  min-height: 520px;
-  max-height: 820px;
-  border: 0 !important;
-  display: block !important;
-  margin: 0 !important;
-  padding: 0 !important;
-  background: transparent !important;
-}
+    #cusdis_thread iframe {
+      width: 100% !important;
+      height: 70vh !important;
+      min-height: 520px;
+      max-height: 820px;
+      border: 0 !important;
+      display: block !important;
+      margin: 0 !important;
+      padding: 0 !important;
+      background: transparent !important;
+    }
 
-/* ===== OPTIONAL: even tighter on phones ===== */
-@media (max-width: 480px) {
-  main, .content, .container, .wrap {
-    padding-left: 8px !important;
-    padding-right: 8px !important;
-  }
-  .comments-wrap {
-    padding: 10px !important;
-  }
-  #cusdis_thread iframe {
-    height: 72vh !important;
-    min-height: 480px;
-  }
-}
+    @media (max-width: 480px) {
+      main, .content, .container, .wrap {
+        padding-left: 8px !important;
+        padding-right: 8px !important;
+      }
+      .comments-wrap {
+        padding: 10px !important;
+      }
+      #cusdis_thread iframe {
+        height: 72vh !important;
+        min-height: 480px;
+      }
+    }
+
     /* ===== COMMENTS: light background (not pure white) ===== */
-.comments-card{
-  background: #f3efe6 !important;            /* warm off-white */
-  border: 1px solid rgba(0,0,0,.10) !important;
-  box-shadow: 0 12px 30px rgba(0,0,0,.18) !important;
-  color: #1f1815 !important;                 /* readable dark text */
-  color-scheme: light;                       /* helps iOS form styling */
-}
+    .comments-card{
+      background: #f3efe6 !important;
+      border: 1px solid rgba(0,0,0,.10) !important;
+      box-shadow: 0 12px 30px rgba(0,0,0,.18) !important;
+      color: #1f1815 !important;
+      color-scheme: light;
+    }
 
-/* tighten a bit too (optional) */
-.comments-card{
-  padding: 8px !important;
-  margin: 10px 0 !important;
-  border-radius: 8px !important;
-}
+    .comments-card{
+      padding: 8px !important;
+      margin: 10px 0 !important;
+      border-radius: 8px !important;
+    }
 
-/* ===== Cusdis area (iframe wrapper + iframe background) ===== */
-#cusdis_thread{
-  background: transparent !important;
-  padding: 0 !important;
-  margin: 0 !important;
-}
+    #cusdis_thread{
+      background: transparent !important;
+      padding: 0 !important;
+      margin: 0 !important;
+    }
 
-#cusdis_thread iframe{
-  background: #fbf8f1 !important;            /* lighter paper */
-  border-radius: 8px !important;
-  border: 1px solid rgba(0,0,0,.08) !important;
-}
+    #cusdis_thread iframe{
+      background: #fbf8f1 !important;
+      border-radius: 8px !important;
+      border: 1px solid rgba(0,0,0,.08) !important;
+    }
   </style>
 </head>
+
 
 <body>
   <!-- Top Bar -->
