--- a/reflections/pages/initial-premise/read.html
+++ b/reflections/pages/initial-premise/read.html
@@ -4,21 +4,23 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>The Premise of a Perfect and loving God -- Ninox Antolihao</title>
+  <title>The Premise of a Perfect and Loving God — Ninox Antolihao</title>
 
-  <!-- Disclaimer -->
+  <!-- SEO -->
+  <meta name="robots" content="index,follow">
   <meta name="description" content="The ideas expressed here are personal opinions and interpretations. They are not official references, factual sources, or professional advice.">
-  <meta property="og:description" content="The ideas expressed here are personal opinions and interpretations. They are not official references, factual sources, or professional advice.">
+  <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/initial-premise/read.html">
 
   <!-- Open Graph -->
   <meta property="og:type" content="article">
-  <meta property="og:title" content="The Premise of a Perfect and loving God - Solitude Reflections">
-  <meta property="og:image" content="devinepremise2.jpg">
+  <meta property="og:title" content="The Premise of a Perfect and Loving God — Solitude Reflections">
+  <meta property="og:description" content="The ideas expressed here are personal opinions and interpretations. They are not official references, factual sources, or professional advice.">
   <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/initial-premise/read.html">
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/initial-premise/devinepremise2.jpg">
+  <meta name="twitter:card" content="summary_large_image">
 
   <!-- Main reflections styles -->
   <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
-   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/initial-premise/read.html">
 
   <style>
     /* =========================
@@ -142,7 +144,6 @@
 
     /* =========================
        DESKTOP NAV (INLINE LINKS)
-       ✅ This is what was missing before
     ========================== */
     .ref-nav{
       flex: 1;
@@ -155,7 +156,7 @@
       list-style:none;
       padding:0;
       margin:0;
-      flex-wrap:wrap;         /* ✅ makes “all visible” by wrapping to multiple lines */
+      flex-wrap:wrap;
       align-items:center;
     }
 
@@ -217,7 +218,7 @@
       padding: 6.6rem 1rem 2rem;
     }
 
-    /* Overlay (NOW clickable to close menu) */
+    /* Overlay (clickable to close menu) */
     .nav-overlay{
       position:fixed;
       inset:0;
@@ -230,7 +231,7 @@
 
     .ref-header.nav-open .nav-overlay{
       opacity:0.6;
-      pointer-events:auto;   /* ✅ clickable */
+      pointer-events:auto;
     }
 
     /* =========================
@@ -248,7 +249,6 @@
         align-items:flex-start;
       }
 
-      /* MOBILE dropdown panel (still uses SAME nav list) */
       .ref-nav{
         position: fixed;
         top: 64px;
@@ -277,9 +277,8 @@
         white-space: normal;
       }
 
-      /* ✅ OPEN STATE */
       .ref-header.nav-open .ref-nav{
-        max-height: calc(100vh - 64px); /* ✅ scrollable if many links */
+        max-height: calc(100vh - 64px);
         overflow-y: auto;
         -webkit-overflow-scrolling: touch;
       }
@@ -322,9 +321,6 @@
       100%{ transform: translateX(-100%); }
     }
 
-    /* =========================
-       AUDIO PLAYLIST (tighter)
-    ========================== */
     .audio-wrap{
       max-width:800px;
       margin:1.2rem auto 1.2rem auto;
@@ -398,13 +394,14 @@
     }
   </style>
 
-  <!-- Service Worker -->
+  <!-- Service Worker (safe: don't run on /reflections/pages/...) -->
   <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/reflections/sw.js');
+    if ('serviceWorker' in navigator && !location.pathname.startsWith('/reflections/pages/')) {
+      navigator.serviceWorker.register('/reflections/sw.js').catch(()=>{});
     }
   </script>
 </head>
+
 
 <body>
 
